--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "axios": "^0.21.0",
     "classnames": "^2.2.6",
     "normalize.css": "^8.0.1",
-    "react": "^16.9.0",
+    "react": "^16.14.0",
     "react-dom": "^16.9.0",
     "react-scripts": "^3.4.4"
   },
@@ -40,8 +40,10 @@
     "@storybook/react": "^5.0.10",
     "@testing-library/jest-dom": "^4.0.0",
     "@testing-library/react": "^8.0.7",
+    "@testing-library/react-hooks": "^3.4.2",
     "babel-loader": "^8.0.5",
-    "node-sass": "^4.11.0"
+    "node-sass": "^4.11.0",
+    "react-test-renderer": "^16.14.0"
   },
   "jest": {
     "watchPathIgnorePatterns": [
